# Google_ADK_Agentic_Projects

./: README.md
Build_Full_stack_E2E_Agentic_Multimodal_Application_with_Agentic_RAG/: README.md  backend.py  pyproject.toml  settings.yaml
Building_E2E_Google_ADK_Agent_application/: readme.md
Building_E2E_Google_ADK_Agent_application/1.Deep_Research_Agent_For_Lead_Generation/: leads_report_20251116_032000.csv  requirements.txt  research_agent.py  research_summary_20251116_032000.json  test_agent.py
Building_E2E_Google_ADK_Agent_application/2.Advanced_Tool_Agent_Using_Gemini_CLI/: quick_test.py  requirements.txt  test_prompts.md  tool_agent.py
Building_E2E_Google_ADK_Agent_application/3.MCP_Tools_Agent_For_Bug_Assistance/: README.md  bug_assistant.py  bug_report.json  demo_script.md  sample_buggy_code.py  test_simple.py
Building_E2E_Google_ADK_Agent_application/4.Production_Quality_Code_Review_Assistant/: agent.py  tools.py
Codelab_lab_2/: README.md
Eemrging_Agentic_AI_Architectures_paper/: readme.md
MCP_A2A/Codelab_lab_1/: README.md
MCP_A2A/Codelab_lab_1/Codelab_lab_3/: deploy_to_agent_engine.py  purchasing_concierge_ui.py
MCP_A2A/Codelab_lab_2/multi_agentic_system/: requirements.txt
MCP_A2A/Codelab_lab_3/: README.md
MCP_and_A2A/: README.md
Modern_AI_with_unsloth.ai/: 1_Full_Finetuning_with_a_small_model.ipynb  2_LORA_parameter_efficient_Finetune.ipynb  3_ReinforcementLearning_Using_Dataset(DPO_RLHF).ipynb  4_ReinforcementLearning_with_GRPO.ipynb  5_ContinuedPretraining_HindiLanguage.ipynb  README.md
(+5 files in other folders)
