[project]
name = "personal-expense-assistant-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "google-adk==1.18.0",
    "google-cloud-aiplatform>=1.55.0",
    "google-cloud-storage>=2.16.0",
    "google-genai>=0.7.1",
    "google-cloud-firestore>=2.20.1",
    "gradio>=5.23.1",
    "pydantic>=2.10.6",
    "pydantic-settings[yaml]>=2.8.1",
    "datasets>=3.5.0",
]
